--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
 		    <label for="endereço">ENDEREÇO</label>	
 		    <input type="text" id="endereço">
 
+	            <label for="email">EMAIL</label>	
+		    <input type="text" id="email">
+			
+	            <imput type="submit" value="ENVIAR RESPOSTAS">
+			    
+			    </fora>
 		</form>
 	</main>
 
