--- a/index.html
+++ b/index.html
@@ -38,3 +38,38 @@
 
 </body>
 </html>
+<table>
+
+<tr>
+
+<td></td>
+
+<td></td>
+
+</tr>
+
+<tr>
+
+<td></td>
+
+<td></td>
+
+</tr>
+
+<tr>
+
+<td></td>
+
+<td></td>
+
+</tr>
+
+<tr>
+
+<td></td>
+
+<td></td>
+
+</tr>
+
+</table>
