--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
          <td>8:50</td>
 
-         <td>projeto de vida</td>
+         <td>Projeto de Vida</td>
 
          <td>Educação Financeira</td>
 
@@ -115,7 +115,7 @@
       <tr>
          <td>9:55</td> 
 
-         <td>projeto de vida</td>
+         <td>Projeto de Vida</td>
 
          <td>Ed. Fisica</td>
 
@@ -139,9 +139,9 @@
 
          <td>Biologia</td>
 
-         <td>filosofia</td>
+         <td>Filosofia</td>
 
-         <td>fisica</td>
+         <td>Fisica</td>
 
      </tr>								 
 </table>
@@ -151,15 +151,15 @@
 	<tr>
          <td>11:30</td> 
 
-         <td>geografia</td>
+         <td>Geografia</td>
 
-         <td>biologia</td>
+         <td>Biologia</td>
 
-         <td>matemat</td>
+         <td>Matematica</td>
 
-         <td>matematica/td>
+         <td>Matematica/td>
 
-         <td>artes</td>
+         <td>Artes</td>
 
      </tr>								 
 </table>
