--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>
+</head>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,7 +9,7 @@
 <body>
 	<h1>formulario de cadastro</h1>
 	<main>
-		<form>
+		</form>
 			
 			
 		    <label for="nome">NOME</label>	
@@ -21,12 +21,12 @@
 	            <label for="email">EMAIL</label>	
 		    <input type="text" id="email">
 			
-		    <div>
+		    </div>
 			    <textarea cols="25px> rows="30px"></textarea>
 		            <p>marque as opçoes</p>			     
 		            <input type="radio" value"telefone"> id="telefone">
 			    <label for="telefone">TELEFONE</label>
-		    <div>
+		    </div>
 				
 				
 			
